<?xml version="1.0"?>
<package>
  <name>tms_db_manager</name>
  <version>0.1.1</version>
  <license>BSD</license>
  <description>The tms_db_manager package</description>

  <maintainer email="passionvirus@gmail.com">Yoonseok Pyo</maintainer>

  <url type="website">http://robotics.ait.kyushu-u.ac.jp/</url>
  <url type="git">http://orion.ait.kyushu-u.ac.jp/HRSG/ros_tms/</url>

  <author email="passionvirus@gmail.com">Yoonseok Pyo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tms_msg_db</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tms_msg_db</run_depend>

  <export>
  </export>
</package>