<?xml version="1.0"?>
<package>
  <name>tms_db_state_publisher</name>
  <version>0.0.3</version>
  <description>The tms_db_state_publisher package</description>

  <maintainer email="kawamura@ait.kyushu-u.ac.jp">Akihiro Kawamura</maintainer>

  <license>BSD</license>

  <url type="website">http://irvs.github.io/ros_tms/</url>
  <url type="repository">https://github.com/irvs/ros_tms</url>
  <url type="bugtracker">https://github.com/irvs/ros_tms/issues</url>

  <author email="passionvirus@gmail.com">Yoonseok Pyo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tms_msg_db</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tms_msg_db</run_depend>

  <export>
  </export>
</package>
