<?xml version="1.0"?>
<package>
  <name>portable_viewer</name>
  <version>1.2.1</version>
  <license>BSD</license>
  <description>The portable_viewer_ package</description>
 
  <maintainer email="ars4253a@gmail.com">Watanabe yuuta</maintainer>

  <url type="website">http://robotics.ait.kyushu-u.ac.jp/index-e.html</url>
  <url type="git">https://github.com/irvs/ros_tms</url>

  <author email="passionvirus@gmail.com">Watanabe Yuuta</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
  </export>
</package>
