<?xml version="1.0"?>
<package>
  <name>tms_msg_rc</name>
  <version>1.0.2</version>
  <license>TODO</license>
  <description>The tms_msg_rc package</description>
 
  <maintainer email="passionvirus@gmail.com">Yoonseok Pyo</maintainer>

  <url type="website">http://robotics.ait.kyushu-u.ac.jp/</url>
  <url type="git">http://orion.ait.kyushu-u.ac.jp/ros-tms/ros_tms/</url>

  <author email="passionvirus@gmail.com">Yoonseok Pyo</author>
  <author email="a_nagata@irvs.ait.kyushu-u.ac.jp">Akihiro Nagata</author>
  <author email="nakashima@irvs.ait.kyushu-u.ac.jp">Kouhei Nakashima</author>
  <author email="hashiguchi@irvs.ait.kyushu-u.ac.jp">Yuka Hashiguchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>  

  <run_depend>std_msgs</run_depend>
  
  <export>
  </export>
</package>
