<?xml version="1.0"?>
<package>
  <name>tms_msg_ss</name>
  <version>1.0.2</version>
  <license>TODO</license>
  <description>The tms_msg_ss package</description>
 
  <maintainer email="passionvirus@gmail.com">Yoonseok Pyo</maintainer>

  <url type="website">http://robotics.ait.kyushu-u.ac.jp/</url>
  <url type="git">http://orion.ait.kyushu-u.ac.jp/ros-tms/ros_tms/</url>

  <author email="passionvirus@gmail.com">Yoonseok Pyo</author>
  <author email="kuwahata@irvs.ait.kyushu-u.ac.jp">Shunya Kuwahata</author>
  <author email="kusaka@irvs.ait.kyushu-u.ac.jp">Kazuya Kusaka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <export>
  </export>
</package>
