<?xml version="1.0"?>
<package>
  <name>tms_msg_ur</name>
  <version>1.0.2</version>
  <license>BSD</license>
  <description>The tms_msg_ur package</description>
 
  <maintainer email="passionvirus@gmail.com">Yoonseok Pyo</maintainer>

  <url type="website">http://robotics.ait.kyushu-u.ac.jp/</url>
  <url type="git">http://orion.ait.kyushu-u.ac.jp/ros-tms/ros_tms/</url>

  <author email="tetsuro@irvs.ait.kyushu-u.ac.jp">Tetsuro Oishi</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
    
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
