<?xml version="1.0"?>
<package>
  <name>tms_msg_ur</name>
  <version>1.0.2</version>
  <license>BSD</license>
  <description>The tms_msg_ur package</description>

  <maintainer email="kawamura@ait.kyushu-u.ac.jp">Akihiro Kawamura</maintainer>

  <url type="website">http://robotics.ait.kyushu-u.ac.jp/index-e.html</url>
  <url type="git">https://github.com/irvs/ros_tms</url>

  <author email="tetsuro@irvs.ait.kyushu-u.ac.jp">Tetsuro Oishi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
